<resources>
    <string name="app_name">PracticumHHCareerCompass</string>
    <string name="shared_pref_storage_key">local_pref</string>
    <string name="search_for_vacancies">Поиск вакансий</string>
    <string name="vacancy">Вакансия</string>
    <string name="enter_your_request">Введите запрос</string>
    <string name="no_internet">Нет интернета</string>
    <string name="no_internet_next_page">Проверьте подключение к интернету</string>
    <string name="failed_to_get_vacancies">Не удалось получить\nсписок вакансий</string>
    <string name="failed_to_get_list">Не удалось получить список</string>
    <string name="no_vacancies">Таких вакансий нет</string>
    <string name="no_region">Такого региона нет</string>
    <string name="filtering_settings">Настройки фильтрации</string>
    <string name="choosing_place_to_work">Выбор места работы</string>
    <string name="place_to_work">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="enter_region">Введите регион</string>
    <string name="enter_industry">Введите отрасль</string>
    <string name="not_show_without_salary">Не показывать без зарплаты</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="select_country">Выбор страны</string>
    <string name="select_region">Выбор региона</string>
    <string name="select_industry">Выбор отрасли</string>
    <string name="Moscow">Москва</string>
    <string name="Russia">Россия</string>
    <string name="Ukraine">Украина</string>
    <string name="Kazakhstan">Казахстан</string>
    <string name="Azerbaijan">Азербайджан</string>
    <string name="Belarus">Беларусь</string>
    <string name="Georgia">Грузия</string>
    <string name="Uzbekistan">Узбекистан</string>
    <string name="another_region">Другие регионы</string>
    <string name="enter_button">Выбрать</string>
    <string name="apply_button">Применить</string>
    <string name="reset_button">Сбросить</string>
    <string name="job_title">Название вакансии</string>
    <string name="required_experience">Требуемый опыт</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="descriptionVacancy">Детальное описание вакансии с требованиями, условиями </string>
    <string name="requirements">Требования</string>
    <string name="conditions">Условия</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="contacts">Контакты</string>
    <string name="text_for_description_vacancy">Знание классических алгоритмов и структуры данных</string>
    <string name="vacancy_name">%s, %s</string>
    <string name="salary_exact">%s %s</string>
    <string name="salary_from">от %s %s</string>
    <string name="salary_to">до %s %s</string>
    <string name="salary_from_to">от %s до %s %s</string>
    <string name="from_1_to_3">От 1 года до 3 лет</string>
    <string name="full_time_remote_work">Полная занятость, Удаленная работа</string>
    <string name="list_of_key_skills">Список ключевых навыков</string>
    <string name="salary_not_set">Зарплата не указана</string>
    <string name="not_found_or_deleted_vacancy">Вакансия не найдена или удалена</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="server_error_next_page">Произошла ошибка</string>
    <string name="favorites">Избранное</string>
    <string name="empty_list">Список пуст</string>
    <string name="bottom_of_list">Вы достигли конца списка</string>
    <string name="main">Главная</string>
    <string name="team">Команда</string>
    <string name="developed_application">Над приложением работали</string>
    <string name="best_android_developers_1">Паничев Алексей</string>
    <string name="best_android_developers_2">Кожанова Наталья</string>
    <string name="best_android_developers_3">Ерин Александр</string>
    <string name="best_android_developers_4">Зыкова Ангелина</string>
    <string name="best_android_developers_5">Заруба Никита</string>
    <string name="eat">Еда</string>
    <string name="email">Email</string>
    <string name="email_mock">JohnDoe@foo.com</string>
    <string name="phone">Телефон</string>
    <string name="phone_mock">+71234567</string>
    <string name="name">Имя</string>
    <string name="name_mock">JohnDoe</string>
    <string name="android_developer">Android-разработчик, Москва</string>
    <string name="mock_rus_mos">Россия, Москва</string>
    <string name="mock_IT">IT</string>
    <string name="chose_area">Выбор места работы</string>

    <plurals name="vacancies_counter">
        <item quantity="zero">Найдено %d вакансий</item>
        <item quantity="one">Найдено %d вакансия</item>
        <item quantity="two">Найдено %d вакансии</item>
        <item quantity="few">Найдено %d вакансии</item>
        <item quantity="many">Найдено %d вакансий</item>
        <item quantity="other">Найдено %d вакансий</item>
    </plurals>
</resources>
